# PyADIF-File

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  build.bat  build.sh  example.adi  example.py  example.txt  make.bat  pyproject.toml  release.bat  requirements.txt  setup.py
.github/workflows/: python-package.yml  python-test.yml
adif_file/: __init__.py  __version__.py
examples/: README.md  csv2adi.py  gen_big_adi.py  nu_plugin_adi.py
examples/data/: bands.json  modes.json
src/adif_file/: __init__.py  adi.py  adif_doc.py  adx.py  util.py
test/: test_dumpadi.py  test_dumpadx.py  test_loadadi.py  test_loadadx.py  test_util.py
test/testdata/: badfile1.adx  badfile2.adx  goodfile.adx  goodfile.txt  goodfile_missing hcomment.txt  goodfile_no_h.txt  latin1file.txt  toomuchheadersfile.txt  utf8file.txt
