[project]
name = "PyADIF-File"
dynamic = ["version", "license"]
authors = [
  { name="Andreas Schawo", email="andreas@schawo.de" },
]
description = "Convert ADIF ADI content to dictionary and vice versa"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Other Audience",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications :: Ham Radio",
    "Topic :: File Formats",
]

[project.urls]
"Homepage" = "https://github.com/gitandy/PyADIF-File"
"Bug Tracker" = "https://github.com/gitandy/PyADIF-File/issues"

[tool.setuptools.dynamic]
version = {attr = "adif_file.__version__"}
