[project]
name = "PyADIF-File"
dynamic = ["version"]
authors = [
  { name="Andreas Schawo", email="andreas@schawo.de" },
]
description = "Convert ADIF ADI/ADX content to dictionary and vice versa"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["xmlschema"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Other Audience",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Ham Radio",
    "Topic :: File Formats",
]

[project.urls]
"Homepage" = "https://github.com/gitandy/PyADIF-File"
"Bug Tracker" = "https://github.com/gitandy/PyADIF-File/issues"


[tool.setuptools.package-data]
adif_file = ["xsd/**"]

[tool.setuptools.dynamic]
version = {attr = "adif_file.__version__"}
